2009-09-11  Nick Clifton  <nickc@redhat.com>

	* po/binutils.pot: Updated by the Translation project.

2009-09-11  Philippe De Muyter  <phdm@macqel.be>

	* obcopy.c (copy_object): New parameter `input_arch', architecture
	of input file, if not specified in input file itself; all callers
	updated; `binary_architecture' hack removed.
	(copy_archive, copy_file): New parameter `input_arch', for
	`copy_object' usage.
	(copy_main): Accept `-B' (`--binary-architecture') option also
	for any arch-less input ifile format, not only `binary'; remove
	bfd_external_binary_architecture hack; instead, add `input_arch'
	to calls to `copy_file'.
	* windres.c, windmc.c : Obsolete and useless external references
	to `bfd_external_binary_architecture' or `bfd_external_machine'
	removed.
	* doc/binutils.texi: Mention that -B parameter can be used for any
	input file type which does not have its own architecture.

2009-09-10  Martin Thuresson  <martin@mtme.org>

	Update soruces to compile cleanly with -Wc++-compat:

	* addr2line.c (slurp_symtab): Fix casts. Introduce variable
	minisyms to avoid aliasing varning.
	* ar.c: Add casts.
	(normalize): Use name del instead of delete.
	(display_target_list,display_info_table): Change loop counter
	variable a to int.
	* bucomm.c: Add casts.
	* debug.c: Update function to use new names.
	(struct debug_baseclass): Rename member from virtual to
	is_virtual.
	(struct debug_type_s, struct debug_field_s, struct
	debug_baseclass_s, struct debug_method_s, struct
	debug_method_variant_s, struct debug_type_s): Rename struct from
	avoid name collision.
        * debug.h: Use new struct names.
	* dwarf.c: Add casts.
	(free_debug_memory): Change loop counter variable a to int.
	* ieee.c: Add casts.
	(enum ieee_var_kind): Move to top level.
	(ieee_class_baseclass): Rename parameter virtual to is_virtual.
	(ieee_class_method_var): Rename variable virtual to is_virtual.
	* nm.c: Add casts.
	* objcopy.c: Add casts.
	(copy_archive): Rename variable	delete to del.