@@ -1,3 +1,8 @@
+2009-09-11  Paul Pluzhnikov  <ppluzhnikov@google.com>
+
+	* readelf.c (process_version_sections, process_symbol_table):
+	Use symbolic constants.
+
 2009-09-11  Nick Clifton  <nickc@redhat.com>
 
 	* po/binutils.pot: Updated by the Translation project.
